--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Waxom</title>
 
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles.css">
 </head>
 <body>
 
